@@ -1,3 +1,5 @@
 -Dlog4j2.disable.jmx=true
 -Xms1024m
 -Xmx1024m
+-XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/var/log/jvm/gc.log
+-XX:ErrorFile=/var/log/jvm/gc.log
